add_subdirectory(D1Base)
add_subdirectory(D1Data)
add_subdirectory(D1DBClient)
add_subdirectory(D1Message)
add_subdirectory(D1Network)
add_subdirectory(D1SEM)
list(APPEND ${BnD_COMPONENTS} "D1Base")
list(APPEND ${BnD_COMPONENTS} "D1Data")
list(APPEND ${BnD_COMPONENTS} "D1DBClient")
list(APPEND ${BnD_COMPONENTS} "D1Message")
list(APPEND ${BnD_COMPONENTS} "D1Network")
list(APPEND ${BnD_COMPONENTS} "D1SEM")
